objects/LLC_BI__Collateral__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Is_Leased_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional checkbox field anytime an associated pledge record has the Is_Leased_Asset_c field on the Collateral Pledged object set to true. If an associated pledge record has been removed or invalidated, the checkbox is not selected.</description>
        <label>Is Leased Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Leasehold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used in a leasehold, where the owner has granted temporary rights to a lessee to hold land or property.</description>
        <label>Leasehold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Legacy_Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field links to the legacy collateral record after being migrated to the new collateral structure. It is auto-populated.</description>
        <label>Legacy Collateral</label>
        <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
        <relationshipLabel>Legacy Collateral</relationshipLabel>
        <relationshipName>Legacy_Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lendable_Value__c</fullName>
        <description>This field is optional. It automatically populates based on the collateral value multiplied by the collateral advance rate.</description>
        <formula>IF (LLC_BI__Is_Leased_Asset__c = true, LLC_BI__Value__c, LLC_BI__Value__c *  LLC_BI__Collateral_Type__r.LLC_BI__Advance_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The collateral value multiplied by the collateral advance rate.</inlineHelpText>
        <label>Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Letter_of_Credit_Date__c</fullName>
        <description>This field is optional and manually populated. Use this field to capture the date on which the Letter of Credit was issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Letter of Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Benefit_Amount__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the amount of the life insurance coverage.</description>
        <label>Life Insurance Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_City__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the city of the insurance company where the life insurance policy is held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the state of the insurance company where the life insurance policy is held.</description>
        <label>Life Insurance Company State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_Street_Address__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of the insurance company where the life insurance policy is held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_ZipCode__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the ZIP code forthe address of the insurance company where the life insurance policy is held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company__c</fullName>
        <description>This field is used to specify the company that holds the Life Insurance Policy being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Policy_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the policy number for the life insurance policy being used as collateral to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Liquidation_Value__c</fullName>
        <description>This field is optional and manually populated. This is the likely value of the collateral if it does not sell on the open market.</description>
        <label>Liquidation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loans_To_Value__c</fullName>
        <description>The system automatically populates this field to display the Loans to Value calculation using the total loan amount divided by the collateral value.</description>
        <formula>LLC_BI__Total_Active_Loans_Value__c / LLC_BI__Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Loans to Value calculation using the total loan amount divided by the collateral value.</inlineHelpText>
        <label>Collateral Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lot__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the real estate lot number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lot</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Make__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the make of a titled piece of collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Make</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Manufacturer__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the party that manufactured the collateral being used to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Marina_Port_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name of the marina or port that is the home marina or port of the boat / vessel collateral being used to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Marina / Port Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>Users manually populate this optional text field. This field is used as the maturity date of the collateral. For Example: a bond C.D./Share Certificate or note.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Model__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the model of titled collateral used to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name_of_Insured__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name as it appears on a life insurance policy being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Tonnage__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify a vessel&apos;s net tonnage. Net tonnage is used to calculate the port duties.</description>
        <label>Net Tonnage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Revaluation_Due_Date__c</fullName>
        <description>A date field used to capture the date the next collateral revaluation is due. This would be entered by the user when a new valuation is entered. No default value.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Next collateral revaluation due date</inlineHelpText>
        <label>Next Revaluation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Shares__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the number of shares being used for this type of collateral securing the loan. This field, when mapping to Laser Pro is only valid on collateral with the Securities subtype, with stock or mutual funds being used for Collateral.</description>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Units__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the number of units contained in the real estate property being used as collateral.</description>
        <label>Number of Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Options__c</fullName>
        <description>This optional field is used to define options that apply to the asset.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. This field is for the value of the other lien position.</description>
        <label>Other Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner_Occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the owner occupies or lives in the real estate property being used as collateral to secure a loan. Checked = true. Unchecked = false.</description>
        <label>Owner Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owners_Interest__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the percentage of ownership.</description>
        <label>Owner&apos;s Interest</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parcel_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the real estate parcel number (property identification number). This number is used for identification and record keeping for tax purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is optional and is used to select a parent record for the Collateral Management record. Information provided on a child record rolls up to the parent collateral for valuation.</description>
        <label>Parent Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Collaterals</relationshipLabel>
        <relationshipName>Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Possessory_Account_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the account number for possessory collateral. When mapped into Laser Pro, when used with a Savings/CD collateral subtype, this field serves as the collateral account number. When used with a Securities collateral subtype, this field serves as the control agreement account number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Possessory Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Possessory_Current_Balance__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the balance available when using possessory collateral. This field is not valid for mapping to Laser Pro if sent with Securities, Stock, or Mutual Fund collateral.</description>
        <label>Possessory Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Dwelling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the real estate property being used to secure the loan is the primary or principal residence of the owner. Checked = true. Unchecked = false.</description>
        <label>Principal Dwelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Tax_Id__c</fullName>
        <description>This field is optional and manually populated. Use this field to describe the property type of a real estate property being used to secure a loan. Choose from the picklist to select Principal Dwelling, Secondary Dwelling, or Investment.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Type__c</fullName>
        <description>This field is used to describe the property type of a real estate property being used to secure a loan. This property type can be listed as the &quot;Principal Dwelling&quot; , &quot;Secondary Dwelling&quot; or &quot; Investment&quot;</description>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Dwelling</fullName>
                </value>
                <value>
                    <fullName>Secondary Residence</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Purchase_Money__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify the collateral is under an original purchase loan, not a refinance or modification.</description>
        <label>Purchase Money</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Purpose__c</fullName>
        <description>Users populate this optional field with the asset use or application type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Refinance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the real estate property being used as collateral has been refinanced.</description>
        <label>Refinance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remaining_Lendable_Value__c</fullName>
        <description>This field is optional and auto-populates. The field indicates the amount of lendable value available after any pledges and/or liens have been accounted for on the piece of collateral. The value of the field is calculated in this way: Lendable Value - (Total Lien Amount - Total Excluded Lien Amount) - (Total Pledge Amount - Total Excluded Pledge Amount).</description>
        <formula>(LLC_BI__Lendable_Value__c - (LLC_BI__Total_Lien_Amount__c - LLC_BI__Total_Excluded_Lien_Amount__c) - (LLC_BI__Total_Pledge_Amount__c - LLC_BI__Total_Excluded_Pledge_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount of lendable value available after any pledges and/or liens have been accounted for on this piece of collateral.</inlineHelpText>
        <label>Available Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Residential_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that a real estate property being used to secure a loan is a residential property.</description>
        <label>Residential Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Residual_Value__c</fullName>
        <description>Users populate this optional field with the expected or actual value of the asset at the completion of its lease or useful life.</description>
        <label>Residual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Second_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the second lien position.</description>
        <label>Second Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>2nd</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secured_By_Interest_In_Real_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify if the collateral is secured by interest in real property.</description>
        <label>Secured By Interest In Real Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secures_Future_Advances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used to secure future advances. This scenario is not valid for use with Aircraft or Ship collateral.</description>
        <label>Secures Future Advances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Serial_Number__c</fullName>
        <description>Users populate this optional field with the serial number of the asset.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Soft_Cost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Users populate this optional field with the asset amount that is categorized as soft costs.</description>
        <label>Soft Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Soft_Cost_Percentage__c</fullName>
        <description>The system automatically populates this field via a formula. It is used to calculate the percentage of soft cost to asset value.</description>
        <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Soft_Cost_Amount__c / LLC_BI__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of an asset&apos;s value categorized as soft costs.</inlineHelpText>
        <label>Soft Cost Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spousal_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually populate this optional text field. This field is used to indicate whether a spousal consent should be created for married owners of the collateral.</description>
        <label>Spousal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Registered__c</fullName>
        <description>This field is optional and manually populated. It is the state where the titled collateral is registered.</description>
        <label>State Registered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>The state that this piece of Collateral is located at.</description>
        <inlineHelpText>The state that this piece of Collateral is located at.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is manually selected and specifies the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</description>
        <inlineHelpText>Manually select the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Street_Address__c</fullName>
        <description>This field is optional and manually populated. It is the street address where the collateral is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The street address that this piece of Collateral is located at.</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subdivision__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the subdivision information for real estate collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subdivision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>